--- a/index.html
+++ b/index.html
@@ -2,13 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="WoodBench es un espacio de inspiración para quienes aman trabajar con madera. Consejos, proyectos y más."
+    />
+    <meta property="og:title" content="WoodBench - Carpintería sin Complicaciones" />
+    <meta
+      property="og:description"
+      content="Inspiración, proyectos y guías para amantes de la carpintería."
+    />
+    <meta property="og:image" content="/WoodBenchLogoBlackWhiteBackground.png" />
+    <meta name="theme-color" content="#ffffff" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Rajdhani:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Rajdhani:wght@300&display=swap"
+      rel="stylesheet"
+    />
 
-    <title>Vite + React</title>
+    <title>WoodBench</title>
   </head>
   <body>
     <div id="root"></div>
